src/css/profile/wearable/changeable/theme-circle/popup.less
/***************************************************************************
                                  Popup
***************************************************************************/

.sprite(@x, @xsize, @ysize, @count, @totalCount) when (@count > 0) {
	.sprite(@x, @xsize, @ysize, (@count - 1), @totalCount);
	@timePercentage: round((100/(@totalCount - 1)) * (@count - 1)) * 1%;
	@{timePercentage} {
		mask-position: (mod((@count - 1), @x) * @xsize)  (floor((@count - 1) / @x)) * @ysize;
	}
}

@keyframes toastCheck {
	.sprite(4, -82 * @unit_base, -82 * @unit_base, 19, 19);
}

.ui-popup {
	width: 100%;
	height: 100%;
	overflow: hidden;
	border: 0;
	border-radius: 50%;
	background-color: @color_popup_bg;

	& ::-webkit-scrollbar {
		display: none;
	}

	.ui-popup-header {
		text-align: center;
		min-height: @fixed_popup_header_height;
		background-color: transparent;
		color: @color_popup_title_text;
		padding-top: @fixed_popup_header_padding_top;
		padding-right: @fixed_popup_header_padding_right;
		padding-bottom: 0;
		padding-left: @fixed_popup_header_padding_left;
		+ .ui-popup-content {
			padding-top: 26 * @px_base;
		}
	}

	.ui-popup-content {
		color: @color_popup_content_text;
		background-color: transparent;
		font-size: 32 * @px_base;
		line-height: 42 * @unit_base;
		padding: 60 * @unit_base 30 * @unit_base 10 * @unit_base;
		text-align: center;
		.ui-listview,
		.ui-inline-listview {
			margin: -25 * @unit_base -55 * @unit_base -16 * @unit_base -55 * @unit_base;
		}

	}

	&.ui-has-side-buttons .ui-popup-content {
		padding-left: 64 * @unit_base;
		padding-right: 64 * @unit_base;
	}

	.ui-popup-footer.ui-side-button {
		.ui-btn {
			top: 33.33%;
			position: fixed;
			text-indent: -9999px;
			padding: 0;
			line-height: 37 * @unit_base;
			font-size: 28 * @unit_base;
			font-weight: bold;
			padding: 8 * @unit_base 18 * @unit_base 0 23 * @unit_base 0;
			color: @color_button_bottom_text;
			margin: 8 * @unit_base 0;
			height: 100 * @unit_base;
			width: 60 * @unit_base;
			background-color: @bg_color_button_bottom;
			border: 3 * @unit_base solid @border_color_button_bottom;
			border-radius: 60 * @unit_base;

			&::before {
				content: "";
				width: @fixed_popup_icon_width;
				height: @fixed_popup_icon_height;
				position: absolute;
			}

			&::after {
				content: "";
				position: absolute;
				width: 100%;
				height: 100%;
				top: 0;
				left: 0;
				background-color: @color_footer_button_bg_press;
				transition: opacity 200ms;
				opacity: 0;
				z-index: -1;
			}

			&::before {
				left: 50%;
				top: 50%;
				transform: translate(-50%, -50%);
			}

			&.ui-btn-active {
				color: @color_button_bottom_text_pressed;
				background-color: @bg_color_button_bottom_pressed;
				height: 100 * @unit_base;
				width: 60 * @unit_base;
				border-radius: 65 * @unit_base;
				font-size: 30 * @unit_base;
				&::after {
					animation: btn-footer-opacity-press linear 565ms;
				}
			}

			&.ui-btn-inactive {
				background-color: @bg_color_button_bottom;
				height: 100 * @unit_base;
				width: 60 * @unit_base;
				border-radius: 65 * @unit_base;
				font-size: 28 * @unit_base;

				&::after {
					animation: btn-footer-opacity-press linear 565ms;
				}
			}

			&.ui-state-disabled, &:disabled {
				color: @color_button_bottom_text_disable;
				background-color: @bg_color_button_bottom_disabled;
				border-color: @border_color_button_bottom_disabled;
			}

			&.ui-btn-icon-only {
				padding: 14 * @unit_base 0 14 * @unit_base 0;
			}

			&:nth-child(1) {
				left: 2 * @unit_base;
			}

			&:nth-child(2) {
				right: 2 * @unit_base;
			}
		}
	}

	.ui-popup-footer.ui-bottom-button {
		position: fixed;
		bottom: 0;
		z-index: 1000;
		max-height: 100 * @unit_base;
		display: flex;
		flex-direction: column;

		justify-content: center;
		align-items: center;
		min-height: 100 * @unit_base;

		.ui-btn {
			display: flex;
			flex-direction: column;
			justify-content: center;
			align-items: center;
			line-height: 37 * @unit_base;
			position: relative;
			font-size: 28 * @unit_base;
			font-weight: bold;
			color: @color_button_bottom_text;
			padding: 8 * @unit_base 18 * @unit_base 0 23 * @unit_base 0;
			margin: 8 * @unit_base 0;
			height: 60 * @unit_base;
			width: 210 * @unit_base;
			background-color: @bg_color_button_bottom;
			border: 3 * @unit_base solid @border_color_button_bottom;
			border-radius: 60 * @unit_base;

			&::after {
				content: "";
				position: absolute;
				width: 100%;
				height: 100%;
				left: 0;
				top: 0;
				background-color: @color_footer_button_bg_press;
				transition: opacity 200ms;
				opacity: 0;
				z-index: -1;
			}

			&.ui-btn-active {
				color: @color_button_bottom_text_pressed;
				background-color: @bg_color_button_bottom_pressed;
				height: 60 * @unit_base;
				width: 210 * @unit_base;
				border-radius: 65 * @unit_base;
				font-size: 30 * @unit_base;
				&::after {
					animation: btn-footer-opacity-press linear 565ms;
				}
			}

			&.ui-btn-inactive {
				background-color: @bg_color_button_bottom;
				height: 60 * @unit_base;
				width: 210 * @unit_base;
				border-radius: 65 * @unit_base;
				font-size: 28 * @unit_base;
				&::after {
					animation: btn-footer-opacity-press linear 565ms;
				}
			}

			&.ui-state-disabled, &:disabled {
				color: @color_button_bottom_text_disable;
				background-color: @bg_color_button_bottom_disabled;
				border-color: @border_color_button_bottom_disabled;
			}

			&.ui-btn-icon-only {
				padding: 14 * @unit_base 0 14 * @unit_base 0;
			}
		}
	}

	&-more-options {
		background-color: transparent;

		.ui-selector {
			background-color: @color_more_options_bg;

			.ui-selector-indicator-text {
				color: @color_more_options_indicator_text;
			}

			.ui-selector-indicator-subtext {
				color: @color_more_options_indicator_subtext;
			}

			.ui-layer {
				.ui-item {
					background-color: @color_more_options_icon_bg;

					&:active {
						background-color: @color_more_options_icon_bg_press;
					}

					&.ui-item-active:active {
						background-color: @color_more_options_icon_bg_active;
					}

					&::before {
						background-color: @color_more_options_icon;

						&:active {
							background-color: @color_more_options_icon_press;
						}
					}

					&.ui-item-active::before {
						background-color: @color_more_options_icon_active
					}
				}
			}
		}
	}

	/***********************
	Popup Container Scroll
	***********************/
	&.ui-scroll-on:not(.ui-ctxpopup):not(.ui-popup-toast) {
		.ui-popup-wrapper::after {
			content: "";
			position: fixed;
			left: 0;
			top: 0;
			width: 100%;
			height: 100%;
			pointer-events: none;
			background-color: @color_popup_edge_inner_glow;
			mask-image: url(./images/Popup/b_popup_edge_inner_glow.png);
			mask-size: 100% 100%;
		}

		.ui-popup-content {
			margin-top: 76 * @unit_base;
			margin-bottom: 76 * @unit_base;
			padding-top: 0;
		}

		.ui-popup-header + .ui-popup-content {
			margin-top: 0;
			padding-top: 8 * @px_base;
		}

		.ui-popup-footer {
			margin-top: -76 * @unit_base;
		}
	}

	/****************************************
	Popup Toast
	****************************************/

	&.ui-popup-toast {
		min-height: 100%;
		background-color: @color_toast_popup_bg;
		background-image: none;
		border: none;
		margin: 0;
		align-items: center;

		&.ui-popup-active, &.in, &.ui-build {
			display: flex;
		}

		.ui-popup-wrapper {
			width: 100%;

			.ui-popup-content {
				padding: 0 30 * @unit_base;
				height: auto;
				background-color: transparent;
				color: @color_toast_text;
				font-size: 28 * @px_base;
				text-align: center;
				line-height: 37 * @px_base;
				text-overflow: ellipsis;
				overflow: hidden;
			}
		}

		&.ui-popup-toast-graphic {
			.ui-popup-wrapper {
				.ui-popup-content {
					font-size: 32 * @px_base;
					line-height: 42 * @px_base;
				}
			}
		}

		.ui-popup-toast-icon {
			width: 82 * @unit_base;
			height: 82 * @unit_base;
			margin-bottom: 16 * @unit_base;
		}

		.ui-popup-toast-check-icon {
			mask-image: url("./images/Popup/toast_check.png");
			mask-repeat: no-repeat;
			animation-name: toastCheck;
			animation-duration: 300ms;
			animation-delay: 300ms;
			animation-iteration-count: 1;
			animation-timing-function: step-start;
			animation-fill-mode: forwards;
			background-color: @color_popup_toast_check;
			&::after {
				content: none;
			}
		}

		/****************************************
		Popup Toast Small
		****************************************/

		&.ui-popup-toast-small {
			height: 160 * @unit_base;
			min-height: 86 * @unit_base;
			width: 160 * @unit_base;
			position: fixed;
			margin-bottom: 5 * @unit_base;
			background-color: @color_toast_popup_small_bg;
			border: solid 1 * @unit_base @color_toast_popup_small_stroke;
			border-radius: 50%;

			.ui-popup-wrapper {
				.ui-popup-content {
					padding: 0 19 * @unit_base;
					max-height: 96 * @unit_base;
					color: @color_toast_popup_small_text;
					font-size: 24 * @unit_base;
					line-height: 32 * @unit_base;
				}
			}

			.ui-popup-toast-icon {
				transform: translateX(-50%) scale(50/82);
				margin: -16 * @unit_base 0;
				background-color: @color_toast_popup_icon;
			}

			&.ui-popup-toast-graphic-only {
				width: 86 * @unit_base;
				height: 86 * @unit_base;
			}

			&.ui-popup-toast-graphic {
				.ui-popup-wrapper {
					.ui-popup-content {
						padding-bottom: 6 * @unit_base;
					}
				}
			}
		}
	}

	/***********************
	Option Popup
	***********************/
	&.ui-ctxpopup {
		height: auto;
	}

}

